# sdk-hub

./: .gitignore  .gitmodules  MODULE.bazel  README.md  WORKSPACE  flake.nix
sdk/rust/hubspot/handwritten/: Cargo.toml
sdk/rust/hubspot/handwritten/src/: crm.rs  lib.rs
sdk/rust/hubspot/handwritten/src/crm/: contact.rs  prelude.rs  schema.rs  v3.rs  workflow.rs
sdk/rust/hubspot/handwritten/src/crm/prelude/: types.rs
sdk/rust/hubspot/handwritten/src/crm/v3/: objects.rs  owners.rs
sdk/rust/hubspot/handwritten/src/crm/v3/objects/: companies.rs  deals.rs  schema.rs
sdk/rust/hubspot/handwritten/src/crm/v3/owners/: schema.rs
sdk/rust/hubspot/handwritten/src/crm/v4/: objects.rs
sdk/rust/hubspot/handwritten/src/crm/v4/objects/: deals.rs
sdk/rust/piano/handwritten/: Cargo.toml  README.md
sdk/rust/piano/handwritten/examples/: access_management.rs  app_features_and_consents.rs  app_get.rs  list_resources.rs  team_list.rs  user_management.rs
sdk/rust/piano/handwritten/src/: lib.rs  publisher.rs
sdk/rust/piano/handwritten/src/publisher/: access.rs  app.rs  consent.rs  gdpr.rs  licensing.rs  promotion.rs  resource.rs  schedule.rs  team.rs  user.rs
sdk/rust/piano/handwritten/src/publisher/access/: schema.rs
sdk/rust/piano/handwritten/src/publisher/app/: features.schema.snapshot.json  get.schema.snapshot.json  list.schema.snapshot.json  schema.rs
sdk/rust/piano/handwritten/src/publisher/consent/: get.schema.snapshot.json  list.schema.snapshot.json  schema.rs
sdk/rust/piano/handwritten/src/publisher/gdpr/: schema.rs
sdk/rust/piano/handwritten/src/publisher/licensing/: contract.rs  contract_domain.rs  contract_domain_user.rs  contract_ip_range.rs  contract_user.rs  licensee.rs  notification.rs
sdk/rust/piano/handwritten/src/publisher/licensing/contract/: get.schema.snapshot.json  list.schema.snapshot.json  periods.rs  schedule.rs  schema.rs
sdk/rust/piano/handwritten/src/publisher/licensing/contract_domain/: list.schema.snapshot.json  schema.rs
sdk/rust/piano/handwritten/src/publisher/licensing/contract_domain_user/: list.schema.snapshot.json  schema.rs
sdk/rust/piano/handwritten/src/publisher/licensing/contract_ip_range/: list.schema.snapshot.json  schema.rs
sdk/rust/piano/handwritten/src/publisher/licensing/contract_user/: list.schema.snapshot.json  schema.rs
sdk/rust/piano/handwritten/src/publisher/licensing/licensee/: list.schema.snapshot.json  schema.rs
sdk/rust/piano/handwritten/src/publisher/promotion/: code.rs  count.schema.snapshot.json  get.schema.snapshot.json  list.schema.snapshot.json  schema.rs  term.rs
sdk/rust/piano/handwritten/src/publisher/resource/: bundle.rs  count.schema.snapshot.json  get.schema.snapshot.json  list.schema.snapshot.json  schema.rs  tag.rs
sdk/rust/piano/handwritten/src/publisher/schedule/: period.rs  schema.rs
sdk/rust/piano/handwritten/src/publisher/team/: list.schema.snapshot.json  schema.rs
sdk/rust/piano/handwritten/src/publisher/user/: get.schema.snapshot.json  list.schema.snapshot.json  schema.rs
sdk/rust/sdk-kit/: Cargo.toml  README.md
sdk/rust/sdk-kit/crates/derive/: Cargo.toml
sdk/rust/sdk-kit/crates/derive/src/: lib.rs
sdk/rust/sdk-kit/crates/derive_internal/: Cargo.toml
sdk/rust/sdk-kit/crates/derive_internal/src/: lib.rs
sdk/rust/sdk-kit/crates/mirrors/: Cargo.toml
sdk/rust/sdk-kit/crates/mirrors/src/: lib.rs
sdk/rust/sdk-kit/crates/tests/: Cargo.toml
sdk/rust/sdk-kit/crates/tests/src/: lib.rs
tools/: Cargo.toml
(+228 files in other folders)
