[package]
name = "hubspot-handwritten-api"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls", "crm-v3", "crm-v4", "tracing"]
crm-v3 = []
crm-v4 = []
tracing = ["dep:tracing"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["raw_value"]}
tracing = { version = "0.1", optional = true }