[package]
name = "piano-handwritten-api"
version = "0.1.0"
edition = "2021"
description = "Unofficial Piano API client library for Rust - handwritten implementation"
authors = ["i10416"]
license = "MIT"
repository = "https://github.com/i10416/sdk-hub"
documentation = "https://docs.piano.io"
keywords = ["piano", "api", "client"]
categories = ["api-bindings"]

[features]
default = ["rustls", "publisher", "tracing"]
publisher = []
tracing = ["dep:tracing"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["raw_value"]}
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# This is necessary to run examples
tokio = { version = "1.0", features = ["full"] }