[package]
name = "mirrors_derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Macros to extract product types and sum types information using reflection"

[lib]
proc-macro = true

[dependencies]
mirrors_derive_internal = { path = "../derive_internal" }
